--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -27,7 +27,9 @@ jobs:
       - name: Build wheel and install
         run: |
           python -m pip install --user --upgrade build
-          python -m build
+          pwd
+          ls
+          python -m build .
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
